--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "chmod a+x ./deploy.sh && ./deploy.sh"
   # functions = "lambda"
-  publish = "public"
+  publish = "build"
 
 [[redirects]]
   from = "/*"
