--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
-  "homepage": "https://example.com/cra",
+  "homepage": "https://example.com/app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
